--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <form id="newTopic-form">
         <label for="new-input">Add a Sport</label>
         <input type="text" id="sport-input"><br>
-        <!-- Button triggers new movie to be added -->
         <input id="add-sport" type="submit" value="Add a Sport">
     </form>
+
+    <div id="gifs-here"></div>
         
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/js/app.js"></script>
